--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ button:hover {
     <p style="color: red;">NOTA: En móvil es mejor descargarla y abrir con VLC. Si se actualiza, deberás volver a descargarla.</p>
   </div>
 
-  <!-- Horario -->
+  <!-- Horario 
   <div style="margin-top: 3rem; background-color: #2c2c3e; border-radius: 12px; color: #fff; padding: 1.5rem 2rem; max-width: 400px; text-align: left;">
     <h2 style="text-align: center; margin-bottom: 1rem; font-size: 1.2rem;">🕒 Horario del Servidor</h2>
     <table style="width: 100%; border-collapse: collapse; font-size: 1rem;">
@@ -302,7 +302,7 @@ button:hover {
         <tr><td style="padding: 6px 10px;">Domingo</td><td style="padding: 6px 10px; text-align: right;">00:00 - 23:59</td></tr>
       </tbody>
     </table>
-  </div>
+  </div>-->
 
   <!-- Sección FAQ -->
 <div style="margin-top: 4rem; max-width: 800px; width: 100%;">
@@ -462,10 +462,10 @@ button:hover {
 
       const horarios = {
         0: ['00:00', '23:59'],
-        1: ['07:00', '01:30'],
-        2: ['07:00', '01:30'],
-        3: ['07:00', '01:30'],
-        4: ['07:00', '01:30'],
+        1: ['00:00', '23:59'],
+        2: ['00:00', '23:59'],
+        3: ['00:00', '23:59'],
+        4: ['00:00', '23:59'],
         5: ['00:00', '23:59'],
         6: ['00:00', '23:59'],
       };
