--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>AceStream a VLC (Beta)</title>
+  <title>AceStream a VLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="Logo/Logo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -199,6 +199,17 @@ button:hover {
   padding-left: 0.5rem;
 }
 
+.lista {
+  background-color: #1b2533 !important;
+  border-left: 5px solid #00c9ff !important;
+  border-radius: 10px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  position: relative;
+  transition: transform 0.3s, box-shadow 0.3s;
+  overflow: hidden;
+}
+
 @media (min-width: 600px) {
   .btns {
     flex-direction: row;
@@ -215,7 +226,7 @@ button:hover {
     <span id="estado-circulo" style="width: 12px; height: 12px; border-radius: 50%; background-color: gray;"></span>
   </div>
 
-  <h1>Reproducir AceStream en VLC (Beta)</h1>
+  <h1>Reproducir AceStream en VLC</h1>
 
   <input type="text" id="acestreamInput" placeholder="Pega el enlace AceStream o el hash">
   <button onclick="generar()">Generar enlace</button>
@@ -282,10 +293,12 @@ button:hover {
 
   <!-- Lista M3U8 -->
   <br><br><br>
+  <div class="lista">
   <div>
     <p>Lista M3U8 con más de 100 canales en <a style="color: #4caf50;" href="https://lc.cx/ACEVLC">https://lc.cx/ACEVLC</a></p>
     <p>Introduce la URL en VLC (Ubicación de Red / Nuevo flujo) o descárgala y ábrela en VLC</p>
     <p style="color: red;">NOTA: En móvil es mejor descargarla y abrir con VLC. Si se actualiza, deberás volver a descargarla.</p>
+  </div>
   </div>
 
   <!-- Horario 
