--- a/index.html
+++ b/index.html
@@ -292,7 +292,15 @@ button:hover {
   </div>
 
   <!-- Lista M3U8 -->
-  <br><br><br>
+   <br><br><br>
+  <div class="lista">
+    <div>
+    <p>Ya he puesto el servidor oficial y funciona mejor. Si falla podeis utilizar el antiguo que seguirá funcionando.</p>
+    <p>Solo cambiad la IP por 34.172.252.191</p>
+    </div>
+  </div>
+  
+  <br><br>
   <div class="lista">
   <div>
     <p>Lista M3U8 con más de 100 canales en <a style="color: #4caf50;" href="https://lc.cx/ACEVLC">https://lc.cx/ACEVLC</a></p>
@@ -300,6 +308,7 @@ button:hover {
     <p style="color: red;">NOTA: En móvil es mejor descargarla y abrir con VLC. Si se actualiza, deberás volver a descargarla.</p>
   </div>
   </div>
+  
 
   <!-- Horario 
   <div style="margin-top: 3rem; background-color: #2c2c3e; border-radius: 12px; color: #fff; padding: 1.5rem 2rem; max-width: 400px; text-align: left;">
@@ -371,6 +380,7 @@ button:hover {
     </div>
   </div>
 
+  <!--
   <div class="faq-item" style="background-color: #2c2c3e; margin-bottom: 1rem; border-radius: 8px; overflow: hidden;">
     <button class="faq-question" style="width: 100%; background: none; border: none; color: #fff; text-align: left; padding: 1rem; font-size: 1rem; font-weight: bold; display: flex; justify-content: space-between; cursor: pointer;">
       ¿Cuando dejará de ser "Beta"?
@@ -391,6 +401,7 @@ button:hover {
     </div>
   </div>
 </div>
+-->
 
   <script>
     let finalUrl = '';
