--- a/index.html
+++ b/index.html
@@ -295,8 +295,7 @@ button:hover {
    <br><br><br>
   <div class="lista">
     <div>
-    <p>Ya está el servidor oficial. Si falla (no debería) podeis utilizar el antiguo que seguirá funcionando.</p>
-    <p>Solo cambiad la IP por 34.172.252.191</p>
+    <p>Ya está el servidor oficial. Tambien podeis utilizar este 34.172.252.191 (Solo VPN).</p>
     </div>
   </div>
   
