--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ button:hover {
    <br><br><br>
   <div class="lista">
     <div>
-    <p>Ya está el servidor oficial. Tambien podeis utilizar este 34.172.252.191 (Solo VPN).</p>
+    <p>Ya está el servidor oficial. Tambien podeis utilizar este 34.10.211.80.</p>
     </div>
   </div>
   
