--- a/index.html
+++ b/index.html
@@ -291,14 +291,23 @@ button:hover {
     <img id="zoomedImg" src="" alt="Imagen ampliada">
   </div>
 
-  <!-- Lista M3U8 -->
-   <br><br><br>
+
+  <br><br><br>
   <div class="lista">
     <div>
-    <p>Ya está el servidor oficial. Tambien podeis utilizar este 34.10.211.80.</p>
+    <p>Entra al grupo <a href="https://t.me/+GSski08mMutkZWU0">https://t.me/+GSski08mMutkZWU0</a></p>
     </div>
   </div>
   
+   <br>
+  <div class="lista">
+    <div>
+    <p>Ya está el servidor oficial. Tambien podeis utilizar este como respaldo 34.10.211.80</p>
+    </div>
+  </div>
+
+  
+  <!-- Lista M3U8 -->
   <br><br>
   <div class="lista">
   <div>
