--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ button:hover {
   <br><br><br>
   <div class="lista">
     <div>
-    <p>Entra al grupo <a href="https://t.me/+GSski08mMutkZWU0">https://t.me/+GSski08mMutkZWU0</a></p>
+    <p>Entra al grupo <a href="https://t.me/+VPTK8yjo5BgzMTM0">https://t.me/+VPTK8yjo5BgzMTM0</a></p>
     </div>
   </div>
   
