--- a/index.html
+++ b/index.html
@@ -291,6 +291,15 @@ button:hover {
     <img id="zoomedImg" src="" alt="Imagen ampliada">
   </div>
 
+
+  <!-- Mantenimiento -->
+  <br><br>
+  <div class="lista">
+  <div>
+    <p>SERVIDOR EN MANTENIMIENTO. CERRADO HASTA NUEVO AVISO.</p>
+  </div>
+  </div>
+  
   <!-- Lista M3U8 -->
   <br><br>
   <div class="lista">
@@ -521,7 +530,7 @@ button:hover {
       const texto = document.getElementById('estado-texto');
       const circulo = document.getElementById('estado-circulo');
       if (activo) {
-        texto.textContent = 'Activo';
+        texto.textContent = 'Mantenimiento';
         texto.style.color = '#4caf50';
         circulo.style.backgroundColor = '#4caf50';
       } else {
