--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ button:hover {
   <br><br>
   <div class="lista">
   <div>
-    <p>SERVIDOR EN MANTENIMIENTO. CERRADO HASTA NUEVO AVISO.</p>
+    <p>Servidor Arreglado, espere un tiempo a que se actualice la lista</p>
   </div>
   </div>
   
@@ -530,7 +530,7 @@ button:hover {
       const texto = document.getElementById('estado-texto');
       const circulo = document.getElementById('estado-circulo');
       if (activo) {
-        texto.textContent = 'Mantenimiento';
+        texto.textContent = 'Activo';
         texto.style.color = '#4caf50';
         circulo.style.backgroundColor = '#4caf50';
       } else {
