--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ button:hover {
       const texto = document.getElementById('estado-texto');
       const circulo = document.getElementById('estado-circulo');
       if (activo) {
-        texto.textContent = 'Activo';
+        texto.textContent = 'EN MANTENIMIENTO';
         texto.style.color = '#4caf50';
         circulo.style.backgroundColor = '#4caf50';
       } else {
