--- a/index.html
+++ b/index.html
@@ -295,7 +295,15 @@ button:hover {
   <br><br>
   <div class="lista">
   <div>
-    <p>Lista M3U8 con más de 100 canales en <a style="color: #4caf50;" href="https://labored-lace.surge.sh/DeadRats.m3u8">https://lc.cx/ACEVLC</a> (ESTARÁ LISTA DESPUES DEL MANTENIMIENTO)</p>
+    <p>Nuevo Grupo de Shickat<a style="color: #4caf50;" href="https://t.me/+DRNZLtWizPQ0YjM0">https://t.me/+DRNZLtWizPQ0YjM0</a></p>
+  </div>
+  </div>
+
+
+  
+  <div class="lista">
+  <div>
+    <p>Lista M3U8 con más de 100 canales en <a style="color: #4caf50;" href="https://labored-lace.surge.sh/DeadRats.m3u8">https://lc.cx/ACEVLC</a></p>
     <p>Introduce la URL en VLC (Ubicación de Red / Nuevo flujo) o descárgala y ábrela en VLC</p>
     <p style="color: red;">NOTA: En móvil es mejor descargarla y abrir con VLC. Si se actualiza, deberás volver a descargarla.</p>
   </div>
