--- a/index.html
+++ b/index.html
@@ -295,6 +295,12 @@ button:hover {
   <br><br>
   <div class="lista">
   <div>
+    <p>La pagina web cambiará a <a style="color: #4caf50;" href="https://acevlc.shickat.me">https://acevlc.shickat.me</a></p>
+  </div>
+  </div>
+
+  <div class="lista">
+  <div>
     <p>Nuevo Grupo de Shickat <a style="color: #4caf50;" href="https://t.me/+DRNZLtWizPQ0YjM0">https://t.me/+DRNZLtWizPQ0YjM0</a></p>
   </div>
   </div>
