--- a/index.html
+++ b/index.html
@@ -536,11 +536,11 @@ button:hover {
       const circulo = document.getElementById('estado-circulo');
       if (activo) {
         texto.textContent = 'Apagado';
-        texto.style.color = '#4caf50';
-        circulo.style.backgroundColor = '#4caf50';
+        texto.style.color = '#f44336';
+        circulo.style.backgroundColor = '#f44336';
       } else {
         texto.textContent = 'Apagado';
-        texto.style.color = '#f44336';
+        texto.style.color = '#4caf50';
         circulo.style.backgroundColor = '#f44336';
       }
     }
