--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redireccionando a AceVLC</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="monetag" content="417485ddcd0c16a2bd4e782a99e800d0">
   <style>
     :root {
       --main-bg: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
